--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 html{
   font-size: 62.5%;
   box-sizing: border-box;
@@ -7,9 +9,9 @@ body,
   height:100vh;
   margin: 0;
 }
-body,input,select,textarea{
+body,input,select,textarea,button{
   font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Montserrate,Helvetica, Arial, sans-serif;
 }
 .grid-container{
   display: grid;
@@ -47,4 +49,68 @@ footer{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.content{
+  display:flex;
+  flex-wrap: wrap;
+}
+.main {
+  flex: 3 60rem;
+}
+.sidebar {
+  flex: 1 20rem;
+}
+/*products*/
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.products li{
+  flex: 0 1 29rem;
+  height:47rem;
+  padding: 1rem;
+ 
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product img{
+  max-width: 34rem;
+  max-height: 34rem;
+}
+.product-price{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+a{
+  text-decoration: none;
+}
+.product-price div,
+.product-price button{
+  text-align: center;
+  flex:1
+}
+.product-price div{
+  font-size: 2rem;
+}
+.button{
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+.button:hover{
+  border:0.1rem #808080 solid;
+}
+.button-primary{
+  background-color: #f0c040;
 }
