--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
-html{
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 body,
-#root{
-  height:100vh;
+#root {
+  height: 100vh;
   margin: 0;
 }
-body,input,select,textarea,button{
+body,
+input,
+select,
+button,
+textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-  font-family: Montserrate,Helvetica, Arial, sans-serif;
 }
-.grid-container{
+
+.grid-container {
   display: grid;
   grid-template-areas:
-  "header",
-  "main",
-  "footer";
+    "header"
+    "main"
+    "footer";
+  grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
-  grid-template-rows:5rem 1fr 5rem;
   height: 100%;
-
 }
-a:hover{
+a {
+  text-decoration: none;
+}
+a:hover {
   color: #ff8000;
 }
-header{
-  grid-area: 'header';
+header {
+  grid-area: header;
   background-color: #203040;
-  color: #ffff;
+  color: #ffffff;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
 }
@@ -39,19 +45,20 @@ header a {
   color: #ffffff;
   text-decoration: none;
 }
-main{
-  grid-area: 'main';
+main {
+  grid-area: main;
 }
-footer{
-  grid-area: 'footer';
+footer {
+  grid-area: footer;
   background-color: #203040;
-  color: #ffff;
+  color: #ffffff;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
-.content{
-  display:flex;
+
+.content {
+  display: flex;
   flex-wrap: wrap;
 }
 .main {
@@ -60,8 +67,9 @@ footer{
 .sidebar {
   flex: 1 20rem;
 }
-/*products*/
-.products{
+
+/* products */
+.products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -70,47 +78,43 @@ footer{
   margin: 0;
   list-style-type: none;
 }
-.products li{
+.products li {
   flex: 0 1 29rem;
-  height:47rem;
+  height: 47rem;
   padding: 1rem;
- 
 }
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-.product img{
-  max-width: 34rem;
-  max-height: 34rem;
+.product img {
+  max-width: 37rem;
+  max-height: 37rem;
 }
-.product-price{
+.product-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-a{
-  text-decoration: none;
-}
 .product-price div,
-.product-price button{
+.product-price button {
   text-align: center;
-  flex:1
+  flex: 1;
 }
-.product-price div{
+.product-price div {
   font-size: 2rem;
 }
-.button{
+.button {
   padding: 1rem;
   border: 0.1rem #c0c0c0 solid;
   background-color: #f0f0f0;
   cursor: pointer;
 }
-.button:hover{
-  border:0.1rem #808080 solid;
+.button:hover {
+  border: 0.1rem #808080 solid;
 }
-.button-primary{
+.button-primary {
   background-color: #f0c040;
 }
